--- a/.lintstagedrc.yaml
+++ b/.lintstagedrc.yaml
@@ -1,3 +1,2 @@
-"**/*.{js,json,md,sol,ts}":
-  - yarn prettier
-  - git add
+"*.{js,json,md,sol,ts,yaml,yml}":
+  - prettier --config ./.prettierrc.yaml --write
